Use v-tooltip instead of a custom popper.js tooltip

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "popper.js": "^1.14.7",
+    "v-tooltip": "^2.0.1",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1"
   },
