--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "debounce": "^1.2.0",
     "v-tooltip": "^2.0.1",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1"
