--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "build": "gridsome build",
     "dev": "gridsome develop",
-    "explore": "gridsome explore"
+    "explore": "gridsome explore",
+    "lint": "eslint src --ext .js,.vue",
+    "format": "npm run lint -- --fix"
   },
   "dependencies": {
     "debounce": "^1.2.0",
@@ -12,9 +14,24 @@
     "v-tooltip": "^2.0.2"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-vue": "^5.2.2",
+    "lint-staged": "^8.1.7",
     "node-sass": "^4.12.0",
     "sass": "^1.20.3",
     "sass-loader": "^7.1.0",
     "style-resources-loader": "^1.2.1"
+  },
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,vue}": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
