--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "debounce": "^1.2.0",
-    "gridsome": "^0.6.0",
-    "v-tooltip": "^2.0.2"
+    "gridsome": "^0.6.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
