--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "debounce": "^1.2.0",
-    "gridsome": "^0.6.0"
+    "gridsome": "^0.6.0",
+    "popper.js": "^1.15.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
