--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-vue": "^5.2.2",
     "lint-staged": "^8.1.7",
     "node-sass": "^4.12.0",
+    "prettier": "^1.17.1",
     "sass": "^1.20.3",
     "sass-loader": "^7.1.0",
     "style-resources-loader": "^1.2.1"
